fixed strange horizontal axis overflow

--- a/src/styles/scss/_App.scss
+++ b/src/styles/scss/_App.scss
@@ -12,7 +12,6 @@ body {
   min-height: 100vh;
 
   main {
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
