--- a/src/styles/scss/_Controls.scss
+++ b/src/styles/scss/_Controls.scss
@@ -120,8 +120,8 @@
     }
 
     input[type='checkbox'] {
+      display: none;
       position: absolute;
-      opacity: 0;
       z-index: -2;
 
       & + label {
